--- a/Template/index.html
+++ b/Template/index.html
@@ -27,7 +27,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
       <a class="navbar-brand js-scroll-trigger" href="#page-top">
-        <span class="d-block d-lg-none">记录工作和生活</span>
+        <span class="d-block d-lg-none">坚持下去总有一天会如你所愿</span>
         <span class="d-none d-lg-block">
           <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="../static/img/profile.jpg" alt="">
         </span>
@@ -77,6 +77,9 @@
             <a href="https://instagram.com/zhuxyid/">
               <i class="fab fa-instagram"></i>
             </a>
+            <a href="https://instagram.com/zhuxyid/">
+              <i class="fab fa-weixin"></i>
+            </a>
           </div>
         </div>
       </section>
@@ -85,30 +88,28 @@
 
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="experience">
         <div class="my-auto">
-          <h2 class="mb-5">经历......</h2>
+          <h2 class="mb-5">懂啥......</h2>
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">打杂OPS,10点修电脑经验</h3>
-              <div class="subheading mb-3">111</div>
-              <p>~~~~</p>
+              <h3 class="mb-0">野路子学习</h3>
+              <div class="subheading mb-3">OS:</div>
+              <p>Windows，Linux，Macos</p>
+              <div class="subheading mb-3">Dev:</div>
+              <p>Shell,Python</p>
+              <div class="subheading mb-3">CI/CD</div>
+              <p>K8s,Ansible,Gitlab,Jenkins,Jira,Zabbix</p>
+              <div class="subheading mb-3">Middleware:</div>
+              <p>Nginx,Apache,Tomat,Redis,Mongodb,Mysql,ELK...</p>
+              <div class="subheading mb-3">Framework</div>
+              <p>Django</p>
+              <div class="subheading mb-3">Container:</div>
+              <p>Docker</p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">1990~2018</span>
+              <span class="text-primary">2012~2018</span>
             </div>
           </div>
-
-          <div class="resume-item d-flex flex-column flex-md-row mb-5">
-            <div class="resume-content mr-auto">
-              <h3 class="mb-0">除了修电脑没有啥会了</h3>
-              <div class="subheading mb-3"></div>
-              <p>~~~~</p>
-            </div>
-            <div class="resume-date text-md-right">
-              <span class="text-primary">2018~2080希望你能活那么久</span>
-            </div>
-          </div>
-
 
         </div>
 
@@ -144,40 +145,10 @@
           <div class="subheading mb-3">先下来</div>
           <ul class="list-inline dev-icons">
             <li class="list-inline-item">
-              <i class="fab fa-html5"></i>
+              <i class="fab fa-linux"></i>
             </li>
             <li class="list-inline-item">
-              <i class="fab fa-css3-alt"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="fab fa-js-square"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="fab fa-angular"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="fab fa-react"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="fab fa-node-js"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="fab fa-sass"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="fab fa-less"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="fab fa-wordpress"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="fab fa-gulp"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="fab fa-grunt"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="fab fa-npm"></i>
+              <i class="fab fa-windows"></i>
             </li>
           </ul>
 
@@ -193,7 +164,7 @@
               <i class="fa-li fa fa-check"></i>
               穷</li>
             <li>
-              <i class="fa-li fa fa-check"></i>
+              <i class="fa-li fa fa-spinner fa-spin"></i>
               没想到</li>
           </ul>
         </div>
