--- a/Template/index.html
+++ b/Template/index.html
@@ -40,7 +40,7 @@
             <a class="nav-link js-scroll-trigger" href="#about">关于</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#experience">经历</a>
+            <a class="nav-link js-scroll-trigger" href="#experience">技能</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#blog">博客</a>
@@ -101,11 +101,11 @@
               <p>Windows，Linux，Macos</p>
               <div class="subheading mb-3">Dev:</div>
               <p>Shell,Python</p>
-              <div class="subheading mb-3">CI/CD</div>
+              <div class="subheading mb-3">DevOps:</div>
               <p>K8s,Ansible,Gitlab,Jenkins,Jira,Zabbix</p>
               <div class="subheading mb-3">Middleware:</div>
               <p>Nginx,Apache,Tomat,Redis,Mongodb,Mysql,ELK...</p>
-              <div class="subheading mb-3">Framework</div>
+              <div class="subheading mb-3">Framework:</div>
               <p>Django</p>
               <div class="subheading mb-3">Container:</div>
               <p>Docker</p>
@@ -123,20 +123,66 @@
 
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="blog">
         <div class="my-auto">
-          <h2 class="mb-5">修电脑</h2>
-
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
-            <div class="resume-content mr-auto">
-              <h3 class="mb-0">修电脑</h3>
-              <div class="subheading mb-3">修修修修电脑</div>
-              <div>修</div>
-              <p>修</p>
-            </div>
-            <div class="resume-date text-md-right">
-              <span class="text-primary">1990-2018</span>
-            </div>
+              <div class="resume-content mr-auto">
+                  <button type="button" class="btn btn-default" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                      <div class="subheading mb-3">
+                        <a href="">Linux</a>
+                      </div>
+                      <span class="caret"></span>
+                  </button>
+                  <ul class="fa-ul mb-0">
+                    <li><a href="#">Linux Base</a></li>
+                    <li><a href="#">Linux Safe</a></li>
+                    <li><a href="#">Linux Script</a></li>
+                    <li><a href="#">Linux BaseServer</a></li>
+                  </ul>
+              </div>
           </div>
-
+          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+              <div class="resume-content mr-auto">
+                  <button type="button" class="btn btn-default" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                      <div class="subheading mb-3">
+                        <a href="">Web Server</a>
+                      </div>
+                      <span class="caret"></span>
+                  </button>
+                  <ul class="fa-ul mb-0">
+                    <li><a href="#">Nginx</a></li>
+                    <li><a href="#">Apache</a></li>
+                    <li><a href="#">Lighttp</a></li>
+                  </ul>
+              </div>
+          </div>
+          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+              <div class="resume-content mr-auto">
+                  <button type="button" class="btn btn-default" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                      <div class="subheading mb-3">
+                        <a href="">Monitor</a>
+                      </div>
+                      <span class="caret"></span>
+                  </button>
+                  <ul class="fa-ul mb-0">
+                    <li><a href="#">Zabbix</a></li>
+                    <li><a href="#">Zabbix Api</a></li>
+                    <li><a href="#">Zabbix Template</a></li>
+                  </ul>
+              </div>
+          </div>
+          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+              <div class="resume-content mr-auto">
+                  <button type="button" class="btn btn-default" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                      <div class="subheading mb-3">
+                        <a href="">Nosql</a>
+                      </div>
+                      <span class="caret"></span>
+                  </button>
+                  <ul class="fa-ul mb-0">
+                    <li><a href="#">Redis</a></li>
+                    <li><a href="#">Mongodb</a></li>
+                  </ul>
+              </div>
+          </div>
         </div>
       </section>
 
@@ -144,32 +190,29 @@
 
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="live">
         <div class="my-auto">
-          <h2 class="mb-5">生下来，活下去</h2>
+          <h4 class="mb-5">随笔记录</h4>
 
-          <div class="subheading mb-3">先下来</div>
-          <ul class="list-inline dev-icons">
-            <li class="list-inline-item">
-              <i class="fab fa-linux"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="fab fa-windows"></i>
-            </li>
-          </ul>
-
-          <div class="subheading mb-3">活下去</div>
+          <div class="subheading mb-3">拥有什么?</div>
           <ul class="fa-ul mb-0">
             <li>
               <i class="fa-li fa fa-check"></i>
-              没钱</li>
+              啥都没有!</li>
+          </ul>
+            <hr>
+          <div class="subheading mb-3">人生进度:</div>
+          <ul class="fa-ul mb-0">
             <li>
               <i class="fa-li fa fa-check"></i>
-              帅</li>
+              恋爱</li>
             <li>
               <i class="fa-li fa fa-check"></i>
-              穷</li>
+              结婚</li>
             <li>
               <i class="fa-li fa fa-spinner fa-spin"></i>
-              没想到</li>
+              生小孩</li>
+            <li>
+              <i class="fa-li fa fa-spinner fa-spin"></i>
+              退休</li>
           </ul>
         </div>
       </section>
@@ -178,8 +221,8 @@
 
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="photo">
         <div class="my-auto">
-          <h2 class="mb-5">图片</h2>
-          <p class="mb-0">太帅了</p>
+          <h2 class="mb-5">photo</h2>
+          <p class="mb-0">太帅了导致图片无法显示</p>
         </div>
       </section>
 
