--- a/Template/index.html
+++ b/Template/index.html
@@ -133,62 +133,58 @@
         <div class="my-auto">
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
               <div class="resume-content mr-auto">
-                  <button type="button" class="btn btn-default" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                       <div class="subheading mb-3">
-                        <a href="">Linux</a>
+                        <a>Linux</a>
                       </div>
                       <span class="caret"></span>
                   </button>
-                  <ul class="fa-ul mb-0">
+                  <ol class="fa-ul mb-0">
                     <li><a href="#">Linux Base</a></li>
                     <li><a href="#">Linux Safe</a></li>
                     <li><a href="#">Linux Script</a></li>
                     <li><a href="#">Linux BaseServer</a></li>
-                  </ul>
+                  </ol>
               </div>
           </div>
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
               <div class="resume-content mr-auto">
-                  <button type="button" class="btn btn-default" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                       <div class="subheading mb-3">
-                        <a href="">Web Server</a>
+                        <a>Web Server</a>
                       </div>
                       <span class="caret"></span>
                   </button>
-                  <ul class="fa-ul mb-0">
+                  <ol class="fa-ul mb-0">
                     <li><a href="#">Nginx</a></li>
                     <li><a href="#">Apache</a></li>
                     <li><a href="#">Lighttp</a></li>
-                  </ul>
+                  </ol>
               </div>
           </div>
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
               <div class="resume-content mr-auto">
-                  <button type="button" class="btn btn-default" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                       <div class="subheading mb-3">
-                        <a href="">Monitor</a>
+                        <a>Monitor</a>
                       </div>
                       <span class="caret"></span>
                   </button>
-                  <ul class="fa-ul mb-0">
+                  <ol class="fa-ul mb-0">
                     <li><a href="#">Zabbix</a></li>
                     <li><a href="#">Zabbix Api</a></li>
                     <li><a href="#">Zabbix Template</a></li>
-                  </ul>
+                  </ol>
               </div>
           </div>
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
               <div class="resume-content mr-auto">
-                  <button type="button" class="btn btn-default" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                       <div class="subheading mb-3">
-                        <a href="">Nosql</a>
+                        <a>Nosql</a>
                       </div>
                       <span class="caret"></span>
                   </button>
-                  <ul class="fa-ul mb-0">
+                  <ol class="fa-ul mb-0">
                     <li><a href="#">Redis</a></li>
                     <li><a href="#">Mongodb</a></li>
-                  </ul>
+                  </ol>
               </div>
           </div>
         </div>
