--- a/Template/index.html
+++ b/Template/index.html
@@ -100,10 +100,12 @@
             <a href="{{ row.inslink }}">
               <i class="fab fa-instagram"></i>
             </a>
+
             <a onmouseout="hideImg()" onmouseover="showImg()">
               <i class="fab fa-weixin"></i>
+                <div id="wxImg" style="display: none;height:20px;back-ground:#f00;position:absolute;float:left;"><img width="100" src="{{ row.wximg }}">
+            </div>
             </a>
-          <div id="wxImg" style="display: none;height:20px;back-ground:#f00;position:absolute;float:left;"><img src="{{ row.wximg }}"></div>
           </div>
         </div>
 {% endfor %}
