--- a/Template/index.html
+++ b/Template/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-
+    <link rel="shortcut icon" href="../static/favicon.ico" />
     <title>Zhuxy Blog,只是记录工作和生活</title>
 
     <!-- Bootstrap core CSS -->
@@ -71,6 +71,9 @@
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#live">生活</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav_link js-scroll-trigger" href="">manage</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#photo">图片墙</a>
@@ -311,7 +314,6 @@
             //滚动条可滑动高度
             var scrollTop = $(window).scrollTop();
             if(winHeight+scrollTop == docHeight){
-                console.log(1)
                 initImg()
             }
         })
