--- a/Template/index.html
+++ b/Template/index.html
@@ -168,7 +168,7 @@
                     <li><a href="https://blog.zhuxyid.com">Linux Base</a></li>
                     <li><a href="https://blog.zhuxyid.com">Linux Safety</a></li>
                     <li><a href="https://blog.zhuxyid.com">Linux Script</a></li>
-                    <li><a href="https://blog.zhuxyid.com">Linux BaseServer</a></li>
+                    <li><a href="https://blog.zhuxyid.com">Linux BaseServices</a></li>
                   </ol>
               </div>
           </div>
